<resources>
    <string name="app_name">Dekontaminasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">https://dekontaminasi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_stats">Statistik</string>
    <string name="menu_rs">Rumah Sakit</string>
    <string name="menu_news">Berita Terkini</string>
    <string name="menu_about">Tentang</string>

    <string name="stats_infected">Positif</string>
    <string name="stats_fatal">Meninggal</string>
    <string name="stats_recovered">Sembuh</string>

    <string name="search">Pencarian</string>
    <string name="no_contact">Tidak Ada Kontak</string>
</resources>