<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_stats">

    <fragment
        android:id="@+id/nav_stats"
        android:name="id.ryanandri.dekontaminasi.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_rs"
        android:name="id.ryanandri.dekontaminasi.ui.rs.RsFragment"
        android:label="@string/menu_rs"
        tools:layout="@layout/fragment_rs" />

    <fragment
        android:id="@+id/nav_news"
        android:name="id.ryanandri.dekontaminasi.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_about"
        android:name="id.ryanandri.dekontaminasi.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>